# qa_guru_lesson16_poetry_hw

./: pyproject.toml
with_poetry_02/: pyproject.toml
